# cpp-chess-bot

./: .gitignore  CMakeLists.txt  chess_main.cpp
frontend/: app.py
frontend/static/js/: chess-frontend.js
frontend/templates/: chessboard.html
include/: chess.hpp
src/: chess.cpp  networking.cpp  tests.cpp
